Include new info in Media
